# hr

./: .gitignore
lib/: UnitTest1.cs
lib/TestHelper/: TestHelper.cs
practice/: create_blank_project.bat  make_xunit.bat
practice/a-very-big-sum/: simple.cs
practice/angry_prof/: angry_prof.sln
practice/angry_prof/lib.Xunit/: IntegrationTests.cs  UnitTest1.cs  UnitTests.cs  lib.Xunit.csproj
practice/angry_prof/lib.Xunit.Unity/: IntegrationTests.cs  UnitTests.cs  lib.Xunit.csproj
practice/angry_prof/prj/: Class1.cs
practice/angry_prof/unity-prj/: Class1.cs  ContainerBootstrapper.cs  Observing.cs  Top.cs  UtilsImplementation.cs  UtilsInterface.cs  prj.csproj
practice/angry_prof/unity-prj/Controllers/: ContainerBootstrapper.cs  Solution.cs
practice/angry_prof/unity-prj/Interfaces/: IClassUtils.cs  IProfessor.cs  IProfessorUtils.cs  IScheduledClass.cs  IScheduledClassFactory.cs  ISolution.cs  IUnsubscriber.cs
practice/angry_prof/unity-prj/Observing/: LectureTheatre.cs  Mind.cs  Professor.cs  ScheduledClass.cs  ScheduledClassFactory.cs
practice/angry_prof/unity-prj/Utils/: ClassUtils.cs  ProfessorUtils.cs  UnsubscriberLambda.cs
practice/birthday-cake-candles/: birthday-cake-candles.sln
practice/birthday-cake-candles/lib.Xunit/: UnitTest1.cs
practice/birthday-cake-candles/prj/: Class1.cs
practice/compare-the-triplets/: simple.cs
practice/cpp/: new_cpp.bat
practice/cpp/basic/: MyClass.hpp
practice/cpp/hello_world/: .gitignore  .yo-rc.json  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CppProjectConfig.cmake  CppProjectConfigVersion.cmake  Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  UninstallTarget.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  configure  hw.sln  uninstall.vcxproj  uninstall.vcxproj.filters
practice/cpp/hello_world/share/CppUtility/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
practice/cpp/hello_world/share/CppUtility/src/: MyUtility.cxx
practice/cpp/hello_world/test/: Global.test.hpp  (+2 more)
practice/diagonal-difference/: simple.cs
practice/mini-max-sum/: mini-max-sum.sln
practice/mini-max-sum/lib.Xunit/: UnitTest1.cs
practice/mini-max-sum/prj/: Class1.cs
practice/plus-minus/: simple.cs
practice/simple-array-sum/: simple.cs
practice/solve-me-first/: make_complex.bat  simple.cs
practice/staircase/: staircase.sln
practice/staircase/lib.Xunit/: UnitTest1.cs
practice/staircase/prj/: Class1.cs
practice/time-conversion/: time-conversion.sln
practice/time-conversion/lib.Xunit/: UnitTest1.cs
practice/time-conversion/prj/: Class1.cs
practice/utopian-tree/: utopian-tree.sln
practice/utopian-tree/lib.Xunit/: UnitTest1.cs  lib.Xunit.csproj
practice/utopian-tree/prj/: Class1.cs
tutorials/t1 - arrays left rotation/: simple.cs
tutorials/t1 - arrays left rotation/tests/: run_console_tests.bat  t3_input.txt  t3_output.txt
(+17 files in other folders)
